--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,7 @@ $background-coffe: #d0bcb2;
 $background-hover: #d0bcb2;
 $background-white: white;
 $background-pink: #ffe4f3;
+$backgrpund-yallow: #f5f1ef;
 
 // text colors
 
